@@ -461,7 +461,7 @@
 # A special extra option allows excaped surrogate code points in 8-bit mode,
 # but subjects containing them must not be UTF-checked.
 
-/\x{d800}/utf,allow_surrogate_escapes
+/\x{d800}/I,utf,allow_surrogate_escapes
     \x{d800}\=no_utf_check
 
 /\udfff\o{157401}/utf,alt_bsux,allow_surrogate_escapes
